--- a/main.css
+++ b/main.css
@@ -1872,7 +1872,7 @@
     margin-right: 450px;
   }
   [class*=layers] > [class*=layer] > [class*=container]::after {
-    content: "アイドル";
+    content: "アイドル!";
     position: fixed;
     top: 220px;
     bottom: 85px;
